css correction in train checkout page alignment correction

--- a/src/app/train/trains-traveller/travellers.component.scss
+++ b/src/app/train/trains-traveller/travellers.component.scss
@@ -195,7 +195,7 @@
 .trainTimeInfo{
     display: flex;
     justify-content: start;
-    align-items: center;
+    // align-items: center;
     gap: 30px;
     div{
         /* margin: 0px 10px;
@@ -926,6 +926,10 @@ font-size:12px;
         font-size: 15px;
         font-weight: 500;
     }
+}
+.align_center{
+    display:flex;
+    align-items:center;
 }
  
 
